# media_duplicate_checker

./: CLAUDE.md  README.md  SPECIFICATION.md  main.py  pyproject.toml  requirements.txt  test_delete_functionality.py  test_preview.py
src/media_duplicate_checker/: __init__.py  main.py
src/media_duplicate_checker/cli/: main.py
src/media_duplicate_checker/core/: __init__.py  auto_selector.py  grouper.py  models.py  parser.py  scanner.py  similarity.py
src/media_duplicate_checker/core/tests/: test_auto_selector.py  test_grouper.py  test_models.py  test_parser.py  test_similarity.py
src/media_duplicate_checker/ui/: __init__.py  main_window.py  review_window.py
src/media_duplicate_checker/ui/tests/: test_review_window.py
